<resources>
    <string name="app_name">My Places</string>
    <string name="title_activity_maps">Map</string>
    <string name="dialog">Locating you…</string>
    <string name="menuEdit">Edit</string>
    <string name="menuDelete">Delete</string>
    <string name="deletion">Almost done…</string>
    <string name="test">editLocationText</string>
    <string name="almostthere">Almost there…</string>
    <string name="go_to">Go To</string>
    <string name="direction">Direction</string>
    <string name="google_map">Google Maps</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name </string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="share">Share</string>
    <string name="_8942">&amp;#8942</string>
    <string name="latitude_longitude">Latitude, Longitude :</string>
    <string name="nickname">Nickname :</string>
    <string name="fullname">Fullname :</string>
    <string name="favorite">Favorite :</string>
    <string name="todo">TODO</string>
    <string name="static_map">static map</string>
    <string name="appbar_img">appbar image</string>
    <string name="nickname_1">Nickname</string>
    <string name="more_menu">more menu</string>
    <string name="fullname_1">Fullname</string>
    <string name="add_a_place_icon">add a place icon</string>
    <string name="add_a_new_place_text">Add a new place</string>
    <string name="refresh">Refresh</string>
</resources>
