<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/itemEdit"
        android:orderInCategory="2"
        android:title="@string/menuEdit" />
    <item android:id="@+id/itemGoto"
        android:title="@string/go_to"
        android:orderInCategory="3">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item android:id="@+id/itemDirection"
                android:title="@string/direction"
                android:orderInCategory="1"/>

            <item android:id="@+id/itemGmap"
                android:title="@string/google_map"
                android:orderInCategory="2"/>

        </menu>
    </item>

    <item android:title="@string/share"
        android:id="@+id/itemShare"
        android:orderInCategory="4" />


    <item android:id="@+id/itemDelete"
        android:title="@string/menuDelete"
        android:orderInCategory="5" />

</menu>